# opencoder

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  release-please-config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release-please.yml  release.yml
crates/agent/: AGENTS.md  Cargo.toml
crates/agent/src/: agent.rs  agent_loop.rs  lib.rs  permission.rs
crates/agent/src/prompts/: build.txt  compaction.txt  explore.txt  general.txt  plan.txt  summary.txt  title.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs  upgrade.rs
crates/cli/src/tui/: app.rs  key.rs  mod.rs  theme.rs
crates/cli/src/tui/components/: agent_selector.rs  file_selector.rs  markdown.rs  message_list.rs  mod.rs  model_selector.rs  overlay.rs  permission_dialog.rs  question_dialog.rs
crates/cli/src/tui/screens/: home.rs  mod.rs  session.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: command.rs  lib.rs  skill.rs
crates/core/src/bus/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/env/: mod.rs
crates/core/src/flag/: mod.rs
crates/core/src/global/: mod.rs
crates/core/src/id/: mod.rs
crates/core/src/storage/: migration.rs  mod.rs  schema.rs
crates/core/src/storage/migrations/: 0001_initial.sql
crates/core/src/util/: mod.rs  wildcard.rs
crates/file/: Cargo.toml
crates/file/src/: detect.rs  formatter.rs  lib.rs  listing.rs  watcher.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  languages.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/patch/: Cargo.toml
crates/patch/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  project.rs
crates/provider/: AGENTS.md  Cargo.toml
crates/provider/src/: error.rs  init.rs  lib.rs  model.rs  models_db.rs  provider.rs  sse.rs
crates/provider/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  state.rs
crates/server/src/routes/: config.rs  global.rs  mod.rs  project.rs  provider.rs  session.rs
crates/session/: AGENTS.md  Cargo.toml
crates/session/src/: compaction.rs  lib.rs  message.rs  processor.rs  retry.rs  session.rs  share.rs  system_prompt.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
crates/tool/: AGENTS.md  Cargo.toml
crates/tool/descriptions/: apply_patch.txt  bash.txt  edit.txt  glob.txt  grep.txt  multiedit.txt  read.txt  webfetch.txt  write.txt
crates/tool/src/: lib.rs  registry.rs  tool.rs  truncation.rs
crates/tool/src/tools/: apply_patch.rs  bash.rs  edit.rs  glob.rs  grep.rs  lsp.rs  mcp.rs  mod.rs  multiedit.rs  question.rs  read.rs  task.rs  todo.rs  webfetch.rs  write.rs
scripts/: build.sh  download_models.sh  version-bump.sh
