[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/provider",
    "crates/tool",
    "crates/session",
    "crates/agent",
    "crates/mcp",
    "crates/lsp",
    "crates/file",
    "crates/snapshot",
    "crates/project",
    "crates/server",
    "crates/cli",
    "crates/patch",
    "crates/shell",
    "crates/pty",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/anthropics/opencoder"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.35", features = ["bundled", "serde_json"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI + TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
globset = "0.4"
ignore = "0.4"
similar = "2"
regex = "1"
once_cell = "1"
dashmap = "6"
parking_lot = "0.12"
dirs = "6"
strsim = "0.11"
rand = "0.9"
base62 = "2"
notify = "7"
open = "5"
arboard = "3"
semver = "1"
indicatif = "0.17"

# Internal crates
opencoder-core = { path = "crates/core" }
opencoder-provider = { path = "crates/provider" }
opencoder-tool = { path = "crates/tool" }
opencoder-session = { path = "crates/session" }
opencoder-agent = { path = "crates/agent" }
opencoder-mcp = { path = "crates/mcp" }
opencoder-lsp = { path = "crates/lsp" }
opencoder-file = { path = "crates/file" }
opencoder-snapshot = { path = "crates/snapshot" }
opencoder-project = { path = "crates/project" }
opencoder-server = { path = "crates/server" }
opencoder-cli = { path = "crates/cli" }
opencoder-patch = { path = "crates/patch" }
opencoder-shell = { path = "crates/shell" }
opencoder-pty = { path = "crates/pty" }
