[package]
name = "opencoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencoder"
path = "src/main.rs"

[dependencies]
opencoder-core = { workspace = true }
opencoder-server = { workspace = true }
opencoder-session = { workspace = true }
opencoder-provider = { workspace = true }
opencoder-agent = { workspace = true }
opencoder-tool = { workspace = true }
opencoder-project = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
