[package]
name = "opencoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencoder"
path = "src/main.rs"

[dependencies]
opencoder-core = { workspace = true }
opencoder-server = { workspace = true }
opencoder-session = { workspace = true }
opencoder-provider = { workspace = true }
opencoder-agent = { workspace = true }
opencoder-tool = { workspace = true }
opencoder-project = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-macos-x64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-macos-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-linux-x64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-linux-x64-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-linux-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/opencoder-{ version }-windows-x64.zip"
pkg-fmt = "zip"
