[package]
name = "opencoder-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
