[package]
name = "opencoder-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
opencoder-provider = { workspace = true }
