[package]
name = "opencoder-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core = { workspace = true }
opencoder-session = { workspace = true }
opencoder-provider = { workspace = true }
opencoder-agent = { workspace = true }
opencoder-tool = { workspace = true }
opencoder-project = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
async-stream = "0.3"
