[package]
name = "opencoder-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core = { workspace = true }
opencoder-provider = { workspace = true }
opencoder-tool = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
rusqlite = { workspace = true }
