[package]
name = "opencoder-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
