[package]
name = "opencoder-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core = { workspace = true }
opencoder-patch = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
